--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ stream = []
 log = "0.4"
 futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
 pin-project = "1.0"
-tokio = { version = "0.3", default-features = false, features = ["io-util"] }
+tokio = { git = "https://github.com/fudini/tokio.git", default-features = false, features = ["io-util"] }
 
 [dependencies.tungstenite]
 version = "0.11.1"
@@ -37,6 +37,6 @@ version = "0.2"
 
 [dev-dependencies]
 futures-channel = "0.3"
-tokio = { version = "0.3", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "stream", "time"] }
+tokio = { git = "https://github.com/fudini/tokio.git", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "stream", "time"] }
 url = "2.0.0"
 env_logger = "0.7"
